--- a/src/Locales/en/translation.json
+++ b/src/Locales/en/translation.json
@@ -20,7 +20,7 @@
 		"from": "from",
 		"rub": "300000₽",
 		"usd": "$3300",
-		"eur": "€3080"
+		"eur": "€3150"
 	},
 	"shedules": {
 		"name": "Work Schedule",
@@ -156,7 +156,7 @@
 	},
 	"software": {
 		"name": "Computer software",
-		"soft": ["Windows 10 PRO build 1909", "Visual Studio Code (VSC)", "Cursor"]
+		"soft": ["Windows 10 Enterprise LTSC", "Visual Studio Code (VSC)", "Cursor"]
 	},
 	"personal": {
 		"name": "Personal Information",
