refactor Hero Section

--- a/src/Locales/ru/translation.json
+++ b/src/Locales/ru/translation.json
@@ -1,16 +1,23 @@
 {
-	"lang": "Язык",
 	"bio": {
-		"name": "Биография",
 		"fio": "Мошкин Юрий Алексеевич",
 		"position": "Senior NODE.JS backend developer",
 		"geo": "КУЗБАСС, г.Юрга (возможны командировки)"
+	},
+	"pay": {
+		"name": "Желаемая зарплата",
+		"from": "от",
+		"rub": "300000₽",
+		"usd": "$3300",
+		"eur": "€3150"
 	},
 	"contacts": {
 		"title": "Связаться со мной",
 		"subtitle": "Готов обсудить возможности или просто пообщаться?",
 		"copy": "Копировать",
 		"copied": "Скопировано",
+		"sendEmail": "Отправить письмо",
+		"sendTelegram": "Написать в Telegram",
 		"phone": {
 			"name": "Телефон",
 			"value": "+7(900)100-10-10"
@@ -32,16 +39,9 @@
 			"value": "moshkinura"
 		}
 	},
-	"pay": {
-		"name": "Желаемая зарплата",
-		"from": "от",
-		"rub": "300000₽",
-		"usd": "$3300",
-		"eur": "€3150"
-	},
 	"skills": {
 		"name": "Технические навыки",
-		"description": "Мой опыт работы с различными технологиями и фреймворками",
+		"description": "Мой опыт работы с различными технологиями* и фреймворками*",
 		"disclamer": "* - Оценка навыка, может отличаться от действительности, чисто объективно-оценочное суждение",
 		"categories": {
 			"language": {
@@ -462,8 +462,6 @@
 	},
 	"cta": {
 		"title": "Давайте работать вместе",
-		"subtitle": "Меня всегда интересуют новые возможности и сложные проекты. Не стесняйтесь обращаться к мне, если вы хотите обсудить потенциальное сотрудничество.",
-		"sendEmail": "Отправить письмо",
-		"sendTelegram": "Написать в Telegram"
+		"subtitle": "Меня всегда интересуют новые возможности и сложные проекты. Не стесняйтесь обращаться к мне, если вы хотите обсудить потенциальное сотрудничество."
 	}
 }
