refactor Skills and Experience sections

--- a/src/Locales/ru/translation.json
+++ b/src/Locales/ru/translation.json
@@ -5,7 +5,7 @@
 		"geo": "КУЗБАСС, г.Юрга (возможны командировки)"
 	},
 	"pay": {
-		"name": "Желаемая зарплата",
+		"title": "Желаемая зарплата",
 		"from": "от",
 		"rub": "300000₽",
 		"usd": "$3300",
@@ -40,7 +40,7 @@
 		}
 	},
 	"skills": {
-		"name": "Технические навыки",
+		"title": "Технические навыки",
 		"description": "Мой опыт работы с различными технологиями* и фреймворками*",
 		"disclamer": "* - Оценка навыка, может отличаться от действительности, чисто объективно-оценочное суждение",
 		"categories": {
@@ -174,7 +174,7 @@
 		}
 	},
 	"learns": {
-		"name": "Хочу изучить",
+		"title": "Хочу изучить",
 		"learn": [
 			{ "name": "k8s" },
 			{ "name": "RabbitMQ" },
@@ -185,7 +185,7 @@
 			{ "name": "Apache Kafka" }
 		]
 	},
-	"expirience": {
+	"experience": {
 		"month": "месяцев",
 		"years": "лет",
 		"responsibility": "Основные обязанности",
@@ -202,10 +202,10 @@
 					"company": "Dats.Games",
 					"position": "Senior backend developer",
 					"location": "г.Москва",
-					"period": ["2024/03/01", "present"],
+					"period": ["2024/03/01", null],
 					"projects": [
 						{
-							"project": "**Проект: Портал для UNITY/WEBGL игр**",
+							"name": "**Проект: Портал для UNITY/WEBGL игр**",
 							"description": "Комплексная игровая платформа, обеспечивающая бесшовную интеграцию Unity и WebGL игр с продвинутым управлением пользователями и обработкой платежей",
 							"responsibilities": [
 								"* Руководство командой разработки из 3 человек (2 frontend и 1 backend) в роли team lead, включая распределение задач и управление процессом разработки.",
@@ -227,7 +227,7 @@
 							]
 						},
 						{
-							"project": "**Проект: Telegram WEBAPP игра/приложение(NDA)**",
+							"name": "**Проект: Telegram WEBAPP игра/приложение(NDA)**",
 							"description": "",
 							"responsibilities": [
 								"* Проектирование и разработка высоконагруженного backend для поддержки сложных игровых сценариев и взаимодействий в Telegram WebApp.",
@@ -256,7 +256,7 @@
 					"period": ["2022/04/04", "2024/02/01"],
 					"projects": [
 						{
-							"project": "**Проект: CRM для конструктора сайтов**",
+							"name": "**Проект: CRM для конструктора сайтов**",
 							"description": "",
 							"responsibilities": [
 								"* Разработка и интеграция новых модулей для расширения возможностей CRM.",
@@ -276,7 +276,7 @@
 							]
 						},
 						{
-							"project": "**Проект: Приложение для ручного и автоматизированного тестирования API (аналог Postman)**",
+							"name": "**Проект: Приложение для ручного и автоматизированного тестирования API (аналог Postman)**",
 							"description": "",
 							"responsibilities": [
 								"* Проектирование структуры базы данных для оптимальной работы приложения.",
@@ -302,11 +302,11 @@
 				{
 					"company": "Авто-Мото магазин запчастей",
 					"position": "Fullstack разработчик",
-					"city": "г.Москва",
+					"location": "г.Москва",
 					"period": ["2013/02/01", "2022/04/01"],
 					"projects": [
 						{
-							"project": "**Проект: Интернет магазин**",
+							"name": "**Проект: Интернет магазин**",
 							"description": "",
 							"responsibilities": [
 								"* Разработка и обслуживание сайта",
