--- a/src/Locales/ru/translation.json
+++ b/src/Locales/ru/translation.json
@@ -361,105 +361,107 @@
 			]
 		}
 	},
-	"personal": {
-		"name": "Личная Информация",
+	"personals": {
+		"title": "Личная Информация",
 		"description": "Professional details and preferences",
-		"nationality": {
-			"name": "Гражданство",
-			"value": "Российская Федерация"
-		},
-		"education": {
-			"name": "Образование",
-			"value": "Среднее"
-		},
-		"birthday": {
-			"name": "Дата рождения",
-			"value": "1997/02/25"
-		},
-		"gender": {
-			"name": "Пол",
-			"value": "Мужской"
-		},
-		"marital": {
-			"name": "Семейное положение",
-			"value": "Гражданский брак"
-		}
-	},
-	"languages": {
-		"name": "Языки",
-		"language": [
-			{
-				"name": "Русский (родной)",
-				"level": "родной",
-				"percent": 99
-			},
-			{
-				"name": "English (Basic - A1)",
-				"level": "Basic - A1",
-				"percent": 15
+		"personal": {
+			"title": "Личные данные",
+			"data": {
+				"nationality": {
+					"name": "Гражданство",
+					"value": "Российская Федерация"
+				},
+				"education": {
+					"name": "Образование",
+					"value": "Среднее"
+				},
+				"birthday": {
+					"name": "Дата рождения",
+					"value": "1997/02/25"
+				},
+				"gender": {
+					"name": "Пол",
+					"value": "Мужской"
+				},
+				"marital": {
+					"name": "Семейное положение",
+					"value": "Гражданский брак"
+				}
 			}
-		]
-	},
-	"shedules": {
-		"name": "График работы",
-		"shedule": [
-			"Сменный график",
-			"Полный рабочий день",
-			"Неполный рабочий день",
-			"Гибкий график",
-			"Ненормированный рабочий день"
-		]
-	},
-	"employments": {
-		"name": "Варианты трудоустройства",
-		"employment": ["Трудовой договор", "ГПД", "Самозанятость"],
-		"recommendation": {
-			"name": "Рекомендации",
+		},
+		"details": {
+			"title": "Дополнительная информация",
+			"driver": {
+				"name": "Водительское удостоверение",
+				"value": "Обучаюсь на категорию \"B\"."
+			},
+			"hobbies": {
+				"name": "Хобби и интересы",
+				"value": "Изучаю профессиональную литературу и создаю несколько pet-проектов с нуля. Также развиваюсь в разных направлениях, что мотивирует к постоянному обучению и самосовершенствованию."
+			},
+			"qualities": {
+				"name": "Личные качества",
+				"value": [
+					"Амбициозность",
+					"Коммуникабельность",
+					"Вежливость",
+					"Готовность помочь",
+					"Открытость",
+					"Умение работать в команде",
+					"Стрессоустойчивость",
+					"Стремление к саморазвитию"
+				]
+			}
+		},
+		"languages": {
+			"title": "Языки",
+			"language": [
+				{
+					"name": "Русский (родной)",
+					"level": "родной",
+					"percent": 99
+				},
+				{
+					"name": "English (Basic - A1)",
+					"level": "Basic - A1",
+					"percent": 15
+				}
+			]
+		},
+		"shedules": {
+			"title": "График работы",
+			"shedule": [
+				"Сменный график",
+				"Полный рабочий день",
+				"Неполный рабочий день",
+				"Гибкий график",
+				"Ненормированный рабочий день"
+			]
+		},
+		"employments": {
+			"title": "Варианты трудоустройства",
+			"employment": ["Трудовой договор", "ГПД", "Самозанятость"]
+		},
+		"recommendations": {
+			"title": "Рекомендации",
 			"information": "Есть рекомендации от \"ВТЭК\", при официальном трудоустройстве.",
 			"note": "Предоставлю, по требованию."
-		}
-	},
-
-	"details": {
-		"name": "Дополнительная информация",
-		"driver": {
-			"name": "Водительское удостоверение",
-			"value": "Обучаюсь на категорию \"B\"."
 		},
-		"hobbies": {
-			"name": "Хобби и интересы",
-			"value": "Изучаю профессиональную литературу и создаю несколько pet-проектов с нуля. Также развиваюсь в разных направлениях, что мотивирует к постоянному обучению и самосовершенствованию."
-		},
-		"qualities": {
-			"name": "Личные качества",
-			"value": [
-				"Амбициозность",
-				"Коммуникабельность",
-				"Вежливость",
-				"Готовность помочь",
-				"Открытость",
-				"Умение работать в команде",
-				"Стрессоустойчивость",
-				"Стремление к саморазвитию"
+		"configure": {
+			"title": "Кофигурация моего компьютера",
+			"elements": [
+				{ "component": "CPU", "spec": "Intel XEON E5-2696" },
+				{ "component": "RAM", "spec": "48GB" },
+				{
+					"component": "GPU",
+					"spec": "NVIDIA GeForce GTX750 / AMD Radeon RX580"
+				},
+				{ "component": "OS", "spec": "Windows 10 Enterprise LTSC" },
+				{ "component": "IDE", "spec": "Visual Studio Code (VSC), Cursor" }
 			]
 		}
 	},
-	"configure": {
-		"name": "Кофигурация моего компьютера",
-		"elements": [
-			{ "component": "CPU", "spec": "Intel XEON E5-2696" },
-			{ "component": "RAM", "spec": "48GB" },
-			{
-				"component": "GPU",
-				"spec": "NVIDIA GeForce GTX750 / AMD Radeon RX580"
-			},
-			{ "component": "OS", "spec": "Windows 10 Enterprise LTSC" },
-			{ "component": "IDE", "spec": "Visual Studio Code (VSC), Cursor" }
-		],
-		"cpu": "Intel XEON E5-2696",
-		"ram": "48GB",
-		"gpu": "NVIDIA GeForce GTX750 / AMD Radeon RX580"
-	},
+
 	"cta": {
 		"title": "Давайте работать вместе",
 		"subtitle": "Меня всегда интересуют новые возможности и сложные проекты. Не стесняйтесь обращаться к мне, если вы хотите обсудить потенциальное сотрудничество."
